unpackaged/main/default/objects/pse__Backlog__c/pse__Backlog__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for scheduled backlog</description>
    <label>Backlog</label>
</CustomObject>