unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Assignment_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of assignments to process in a single batch</description>
    <inlineHelpText>The number of assignments to process in a single batch</inlineHelpText>
    <label>Assignment Batch Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>