unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Backlog_Details_CorporateCurrencies__c.field-meta.xml
<CustomField>
    <fullName>pse__Backlog_Details_CorporateCurrencies__c</fullName>
    <description>A comma-delimited list of valid ISO codes used in backlog reporting.</description>
    <inlineHelpText>A comma-delimited list of valid ISO codes used in backlog reporting.</inlineHelpText>
    <label>Backlog Details Corporate Currencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>