unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Copy_Fields_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Copy_Fields_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The default value for the Copy Fields for Current Time Period checkbox</inlineHelpText>
    <label>Copy Fields Default</label>
    <type>Checkbox</type>
</CustomField>