unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Default_Time_Period_Types__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Time_Period_Types__c</fullName>
    <defaultValue>"Month;Quarter;Year;Perpetual"</defaultValue>
    <description>A semicolon delimited list of the default time period types to process</description>
    <inlineHelpText>A semicolon delimited list of the default time period types to process</inlineHelpText>
    <label>Default Time Period Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>