unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Delete_Details_on_Calc_Deletion__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Details_on_Calc_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Details on Calc Deletion</label>
    <type>Checkbox</type>
</CustomField>