unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Include_Sublevels_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Sublevels_Default__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The default value for the Include Sublevels option</description>
    <inlineHelpText>The default value for the Include Sublevels option</inlineHelpText>
    <label>Include Sublevels Default</label>
    <type>Checkbox</type>
</CustomField>