unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Milestone_Statuses__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone_Statuses__c</fullName>
    <defaultValue>"Open,Planned"</defaultValue>
    <description>A comma-delimited list of valid milestone status values for backlog calculation.</description>
    <inlineHelpText>A comma-delimited list of valid milestone status values for backlog calculation.</inlineHelpText>
    <label>Milestone Statuses</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>