unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Perform_Scheduled_Job_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>pse__Perform_Scheduled_Job_Cleanup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting is deprecated and no longer used.</description>
    <inlineHelpText>This setting is deprecated and no longer used.</inlineHelpText>
    <label>Deprecated: Perform Job Cleanup</label>
    <type>Checkbox</type>
</CustomField>