unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Post_Process_Milestone_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Post_Process_Milestone_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of milestones to process in a single batch if the backlog remainder is processed in a separate batch.</description>
    <inlineHelpText>The number of milestones to process in a single batch if the backlog remainder is processed in a separate batch.</inlineHelpText>
    <label>Post Process Milestone Batch Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>