unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Post_Process_Resource_Request_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Post_Process_Resource_Request_Batch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Post Process Resource Request Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>