unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Process_Backlog_Remainder_Inline__c.field-meta.xml
<CustomField>
    <fullName>pse__Process_Backlog_Remainder_Inline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting is deprecated and no longer used.</description>
    <inlineHelpText>This setting is deprecated and no longer used.</inlineHelpText>
    <label>Deprecated: Process Remainder Inline</label>
    <type>Checkbox</type>
</CustomField>