unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Resource_Request_Bill_Rate_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Bill_Rate_Field__c</fullName>
    <description>Defines the field to use as a bill rate for resource request backlog calculations.</description>
    <inlineHelpText>Defines the field to use as a bill rate for resource request backlog calculations.</inlineHelpText>
    <label>Resource Request Bill Rate Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>