unpackaged/main/default/objects/pse__Backlog__c/fields/pse__Reuse_Detail_Objects_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Reuse_Detail_Objects_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Default value for the Reuse Detail Objects checkbox</inlineHelpText>
    <label>Reuse Detail Objects Default</label>
    <type>Checkbox</type>
</CustomField>